# rogr-api-v3

./: .gitignore  .replit  EVIDENCE_GATHERING_MODULE_SUMMARY.md  EVIDENCE_SHEPHERD_V2_README.md  METHODOLOGY_LOG.md  PHASE_2_CONTINUITY_PROMPT-0ld.md  PHASE_2_CONTINUITY_PROMPT.md  RDT_v2.md  TEST.LOGS.txt  ai_evidence_shepherd.py  claim_extraction_service.py  claim_miner.py  claude_evidence_shepherd.py  claude_provider_v2.py  dual_claude_evidence_shepherd.py  evidence_quality_assessor.py  evidence_shepherd.py  evidence_shepherd_v2.py  loggly_integration.py  main.py  multi_ai_evidence_shepherd.py  openai_provider_v2.py  performance_testing.py  progressive_analysis_service.py  pyproject.toml  rogr_dual_evidence_shepherd.py  rogr_evidence_shepherd.py  rogr_evidence_shepherd_original.py  rogr_fc_scoring_engine.py  rogr_fc_scoring_engine_zero_start.py  rogrv2-backend.tgz  test logs.txt  test_claim_extraction.py  test_claim_miner.py  test_claude_es.py  test_combo_tools.py  test_deployment.py  test_method_exists.py  test_multiedit_2.py  test_multiedit_replication.py  (+10 more)
AI-SESSION-CONTEXT/: ADR_001_EVIDENCE_ENGINE_V3_REPLACEMENT.md  ARCHITECTURE_DECISIONS.md  CODE_PATTERNS.md  COMPLETE_ARCHITECTURE_PLAN.md  COMPLETE_COMPONENT_SPECIFICATIONS.md  CURRENT_SESSION_HANDOFF.md  CURRENT_SESSION_STATE.md  ES_ACI_PLAN.md  EVIDENCE_ENGINE_V3_COMPONENT_SPECIFICATIONS.md  EVIDENCE_ENGINE_V3_REPLACEMENT_PLAN.md  EVIDENCE_ENGINE_V3_SESSION_STEPS.md  IMPLEMENTATION_PROGRESS.md  INTERFACE_SPECIFICATION_ANALYSIS.md  L1_VALIDATION_FINAL_REPORT.md  NEXT_SESSION_OBJECTIVES.md  QUICK_SESSION_PROMPTS.md  (+10 more)
(+334 files in other folders)
